Added something new

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="/Spaghetti.html">Spaghetti</a></li>
             <li><a href="/Krabby.html">Krabby Patty</a></li>
         </ul>
+
+        <p>Putting a new html tag to trigger git - ignore this!</p>
       
         
     </body>
