Changed the localhost to 8080 to 3000 and it worked lets gooo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li><a href="/PB&H.html">PB&H</a></li>
             <li><a href="/Spaghetti.html">Spaghetti</a></li>
-            <li><a href="/Krabby.html">Krabby Patty</a></li>
+            <li><a href="/krabbyr.html">Krabby Patty</a></li>
         </ul>
 
         <p>Putting a new html tag to trigger git - ignore this!</p>
